--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 
 /* --------------- General styling -------------------- */
 
+:root {
+  --quizapp-yellow1: #FFAB00;
+  --quizapp-yellow2: #FFC400;
+  --quizapp-rusty-orange: #E65100;
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -20,15 +26,19 @@ h2 {
   padding-top: 1rem;
 }
 
+.hidden {
+  display: none;
+}
+
 .mdc-top-app-bar {
-  background-color: #FFAB00;
+  background-color: var(--quizapp-yellow1);
   color: black;
 }
 
 /* --------------- Index page -------------------- */
 
 #start-button {
-  color: #E65100;
+  color: var(--quizapp-rusty-orange);
 }
 
 /* --------------- Quiz page -------------------- */
@@ -38,21 +48,16 @@ form {
 }
 
 .question-header {
-  background-color: #FFC400;
+  background-color: var(--quizapp-yellow2);
 }
 
 .mdc-radio .mdc-radio__native-control:enabled:checked+.mdc-radio__background .mdc-radio__outer-circle {
-  border-color: #FFAB00;
+  border-color: var(--quizapp-yellow1);
 }
 
 .mdc-radio .mdc-radio__native-control:enabled+.mdc-radio__background .mdc-radio__inner-circle {
-  border-color: #FFAB00;
+  border-color: var(--quizapp-yellow1);
 }
-
-/* label {
-  color: black;
-  padding: 0 3px;
-} */
 
 .mdc-form-field>label {
   color: black;
@@ -68,5 +73,24 @@ form {
 #submit-button {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  background-color: #E65100;
+  background-color: var(--quizapp-rusty-orange);
+}
+
+#submit-button:disabled {
+  background-color: lightgray;
+}
+
+#result-message__container {
+  background-color: var(--quizapp-yellow2);
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem;
+  font-weight: bold;
+  overflow: hidden; /* This is to avoid that the floated buttons are overflowing */
+}
+
+#result-message__container button {
+  float: right;
+  background-color: var(--quizapp-rusty-orange);
+  margin: 0.1rem;
 }
